Criação de persistencia associativa e persistencias em geral.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=teste1
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=casa_do_programador
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
