Ajuste nas classes e views do administrador, onde os temas estão sendo cadastrados com sucesso e criação e configuração dos modulos do editor.ks

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto = update
+spring.profiles.active=dev,fast
