--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
 spring.profiles.active=dev,fast
+spring.servlet.multipart.max-file-size=15MB
+spring.servlet.multipart.max-request-size=15MB
